# rager

./: .gitignore  pyproject.toml
contracts/rager/: Scarb.toml
contracts/rager/tests/: test_contract.cairo
src/: agent.py  app.py  index.py  llm.py  rag_pipeline.py  transformer.py
src/templates/: chat.html
src/tools/: direct_retrieve.py  fuzzy_retrieve.py  merkle_verify.py
src/utils/: index.py  rag.py
