[project]
name = "rager"
version = "0.1.0"
description = ""
authors = [
    {name = "noemacee",email = "100673718+noemacee@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
license = "MIT"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "langchain (>=0.3.20,<0.4.0)",
    "openai (>=1.66.3,<2.0.0)",
    "pinecone-client (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
